21-02-2020 PSS fixed a problem with plural translation in DeepL, and altered some Alerts to cute-alert 21-02-2020 PSS added the function to empty the translation database with Shift+Alt_F1

--- a/src/translationFillerStyle.css
+++ b/src/translationFillerStyle.css
@@ -947,11 +947,11 @@ table.translations tr.preview.wptf-translated {
 .highlight {
     background: lightpink;
 }
-/*Below code needs to be removed if GlotPress has improved the template*/
+/*Below code needs to be removed if GlotPress has improved the template
 .editor-panel__right {
     flex: 0 0 19rem !important;
-   /* min-width: 1%;*/
-}
+    min-width: 1%;
+} */
 
 /* Tooltip container */
 .tooltip {
